# 42

./: CMakeLists.txt  Makefile  a.out  fillit.c  fillit.h  int2tetra.c  l  main.c  test  test1  tmp.c
fillit/: Untitled-1.c  c  int2tetra.c  main.c  tmp.c
fillit/libft/: ft_strsplit.c
fillit/libft/includes/: libft.h.gch
l.dSYM/Contents/Resources/DWARF/: l
libft/: ft_arrnew.c  ft_atoi.c  ft_free2d.c  ft_free3d.c  ft_strlen.c  ft_wrdcount.c
libft/includes/: libft.h  libft.h.gch
